# metis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: __init__.py  harness.py  quantum_sweep.py  qubo_sweep.py  run.py  system_test.py
claude_skill/: mcp_server.py
examples/: 01_portfolio.py  02_all_engines.py
metis/: __init__.py  router.py  types.py
metis/engines/: __init__.py  classical.py  mcmc.py  mps.py  ortools_engine.py  parallel_tempering.py  qaoa.py  quantum_sim.py  simulated_annealing.py  simulated_annealing_mlx.py  stabilizer.py
tests/: conftest.py  test_adversarial.py  test_benchmark_harness.py  test_classical.py  test_integration.py  test_mcmc.py  test_mps.py  test_ortools.py  test_parallel_tempering.py  test_qaoa.py  test_quantum_sim.py  test_regression.py  test_router.py  test_routing_with_ortools.py  test_simulated_annealing.py  test_simulated_annealing_mlx.py  test_stabilizer.py
